Implement Emotecraft 3 in just a few hours.

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,10 +9,11 @@ org.gradle.parallel=true
 	loader_version=0.14.17
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 3.0+1.19.4
 	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	archives_base_name = emotecraft3
 
 # Dependencies
 	fabric_version=0.75.3+1.19.4
 	fabric_kotlin_version=1.9.3+kotlin.1.8.20
+	playeranimator_version=1.0.2+1.19.4
